# sentry-api-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
sentry_api/: api.py  exceptions.py  http.py  resources.py
sentry_api/resources/: __init__.py  base.py  project_rules.py  projects.py  rules.py  teams.py
